fix alignment

--- a/src/pages/offers/Offers.module.scss
+++ b/src/pages/offers/Offers.module.scss
@@ -2,10 +2,8 @@
     display: flex;
     flex-direction: column;
 
-    flex-grow: 1;
     flex-shrink: 1;
     overflow: auto;
-    // height: 100%;
 
     background-color: #f7f9fa;
     border-top: 1px solid lightgray;
